--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-SQL_PASSWORD=Password1!
-OIDC_CLIENT_SECRET=cO9Gp40cFFQvqeNMBY82Xs3uNIzoaoZp
-MONGO_CONNECTION_STRING=mongodb://nosql:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.4.2
+SQL_PASSWORD=<Password>
+OIDC_CLIENT_SECRET=<Secret>
+MONGO_CONNECTION_STRING=<Connection string>
